<resources>
    <string name="app_name">ReMUMber</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="camera_button">Open Camera</string>
    <string name="sms_button">Send Message</string>
    <string name="send_Photxt">Send Photxt</string>

    <string name="channel_name">ReMUMber Notifications</string>
    <string name="channel_description">ReMUMber Notifications</string>
    <string name="title_activity_set_up">SetUpActivity</string>


    <string name="set_up_title">Set Up ReMUMber</string>
    <string name="set_up_name">Name:</string>
    <string name="set_up_number">Number:</string>
    <string name="set_up_pref">MUM-Bot Preferences:</string>
    <string name="set_gcal">GCal Events</string>
    <string name="set_FBevent">FB Events</string>
    <string name="set_GPS">GPS Events</string>
    <string name="set_weather">Weather</string>

    <string name="save_reMUMber_pref">Save</string>

    <string name="savedName">Not Set</string>
    <string name="savedNumber">Not Set</string>

    <string name="set_up_back_button">Back</string>

    <string name="birthDate">DD Month</string>
    <string name="weather">Weather</string>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="enter_name">Enter New Name</string>
    <string name="no_location_data_provided">No location data provider</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid Lat/Long Used</string>
    <string name="no_address_found">No Address found</string>
    <string name="address_found">Address found</string>
</resources>
